--- a/AspireApp1.AppHost/Properties/launchSettings.json
+++ b/AspireApp1.AppHost/Properties/launchSettings.json
@@ -1,16 +1,16 @@
 {
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "http": {
+    "aspire-host": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:15213",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16118"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:15213"
     }
-  }
+  },
+  "$schema": "http://json.schemastore.org/launchsettings.json"
 }
