--- a/AspireApp1.Architecture/AspireApp1.Architecture.csproj
+++ b/AspireApp1.Architecture/AspireApp1.Architecture.csproj
@@ -18,13 +18,14 @@
     <ItemGroup>
         <PackageReference Include="Dawn.Guard" Version="1.12.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="Polly" Version="7.2.3" />
+        <PackageReference Include="Polly" Version="8.2.0" />
         <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
