--- a/Global.Build.props
+++ b/Global.Build.props
@@ -11,19 +11,6 @@
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <Copyright>© Oragon, gaGO.io, LuizCarlosFaria. All rights reserved.</Copyright>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/luizcarlosfaria/Oragon.RabbitMQ</PackageProjectUrl>
-    <Authors>LuizCarlosFaria</Authors>
-    <Company>oragon.io</Company>
-    <Product>Oragon</Product>
-    <PackageTags>oragon architecture luizcarlosfaria rabbitmq</PackageTags>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <AnalysisLevel>latest-all</AnalysisLevel>
-  </PropertyGroup>
 
   <PropertyGroup>
     <AssetsDir>$(MSBuildThisFileDirectory)/src/Assets/</AssetsDir>
@@ -37,11 +24,10 @@
     <StrongNameKeyId>Open</StrongNameKeyId>
     <!-- Redirect test logs into a subfolder -->
     <TestResultsLogDir>$([MSBuild]::NormalizeDirectory('$(ArtifactsLogDir)', 'TestLogs'))</TestResultsLogDir>
-    <!-- We don't want to use the workload for AppHost projects in this repo -->
+    <!-- We don't want to use the workload for AppHost projects in this repo --><!--
     <SkipAspireWorkloadManifest>true</SkipAspireWorkloadManifest>
-
     <DashboardPublishedArtifactsOutputDir>$([MSBuild]::NormalizeDirectory('$(ArtifactsDir)', 'DashboardArtifacts', '$(Configuration)'))</DashboardPublishedArtifactsOutputDir>
-    <WorkloadsPackageSource>$(ArtifactsShippingPackagesDir)</WorkloadsPackageSource>
+    <WorkloadsPackageSource>$(ArtifactsShippingPackagesDir)</WorkloadsPackageSource>-->
   </PropertyGroup>
 
   <!-- OS/Architecture properties for local development resources -->
