--- a/src/Oragon.RabbitMQ.Abstractions/Oragon.RabbitMQ.Abstractions.csproj
+++ b/src/Oragon.RabbitMQ.Abstractions/Oragon.RabbitMQ.Abstractions.csproj
@@ -1,5 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="./../../Oragon.RabbitMQ.Build.props" />
+
+  <Import Project="./../Oragon.RabbitMQ.Build.props" />
+
+  <ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="7.0.0-alpha.6" />
+    <PackageReference Include="Dawn.Guard" Version="1.12.0" />
+  </ItemGroup>
 
 </Project>
