--- a/src/Oragon.RabbitMQ.MinimalConsumer/Oragon.RabbitMQ.MinimalConsumer.csproj
+++ b/src/Oragon.RabbitMQ.MinimalConsumer/Oragon.RabbitMQ.MinimalConsumer.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="./../../Oragon.RabbitMQ.Build.props" />
+  <Import Project="./../Oragon.RabbitMQ.Build.props" />
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
         <NoWarn>1701;1702;IDE0058</NoWarn>
@@ -11,7 +11,7 @@
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Include="Dawn.Guard" Version="1.12.0" />
+        
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-preview.4.24266.19" />
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0-preview.4.24266.19" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0-preview.4.24266.19" />
