Adição de dependências dos serializadores e correção no fluxo do serializador

--- a/src/Oragon.RabbitMQ.MinimalConsumer/Oragon.RabbitMQ.MinimalConsumer.csproj
+++ b/src/Oragon.RabbitMQ.MinimalConsumer/Oragon.RabbitMQ.MinimalConsumer.csproj
@@ -36,6 +36,8 @@
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Oragon.RabbitMQ.Abstractions\Oragon.RabbitMQ.Abstractions.csproj" />
+      <ProjectReference Include="..\Oragon.RabbitMQ.Serializer.NewtonsoftJson\Oragon.RabbitMQ.Serializer.NewtonsoftJson.csproj" />
+      <ProjectReference Include="..\Oragon.RabbitMQ.Serializer.SystemTextJson\Oragon.RabbitMQ.Serializer.SystemTextJson.csproj" />
       <ProjectReference Include="..\Oragon.RabbitMQ\Oragon.RabbitMQ.csproj" />
     </ItemGroup>
 
