--- a/Global.Build.props
+++ b/Global.Build.props
@@ -9,13 +9,15 @@
     <DebugType>embedded</DebugType>
     <DebugSymbols>true</DebugSymbols>
     <LangVersion>preview</LangVersion>
+
+    <PackageVersion>0.0.1-alpha</PackageVersion>
   </PropertyGroup>
 
 
   <PropertyGroup>
     <AssetsDir>$(MSBuildThisFileDirectory)/src/Assets/</AssetsDir>
     <TestsSharedDir>$(MSBuildThisFileDirectory)/tests/Shared/</TestsSharedDir>
-    <PackageIconFullPath>$(AssetsDir)Oragon-Architecture-Penknife.export.png</PackageIconFullPath>
+    <PackageIconFullPath>$(AssetsDir)Oragon.RabbitMQ.png</PackageIconFullPath>
     <WarnOnPackingNonPackableProject>false</WarnOnPackingNonPackableProject>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
