--- a/.editorconfig
+++ b/.editorconfig
@@ -21,9 +21,20 @@ insert_final_newline = true
 spelling_exclusion_path = spelling.dic
 
 [*.cs]
+# gago - rules - begin
+dotnet_style_qualification_for_field = true:Error
+dotnet_style_qualification_for_property = true:Error
+dotnet_style_qualification_for_method = true:Error
+dotnet_style_qualification_for_event = true:Error
+
+dotnet_code_quality.null_check_validation_methods = Dawn.Guard.Argument(ParamType).NotNull() | Argument | NotNull
+
+dotnet_public_api_analyzer.require_api_files = true
+# gago - rules - end
+
 indent_size = 4
 dotnet_sort_system_directives_first = true
-dotnet_code_quality.null_check_validation_methods = Dawn.Guard.Argument(ParamType).NotNull() | Argument | NotNull
+
 
 
 # use int x = .. over Int32
@@ -122,6 +133,7 @@ csharp_style_prefer_pattern_matching = true:silent
 csharp_style_prefer_not_pattern = true:suggestion
 csharp_style_pattern_matching_over_as_with_null_check = true:suggestion
 csharp_style_prefer_extended_property_pattern = true:suggestion
+csharp_space_around_binary_operators = before_and_after
 
 [*.{xml,config,*proj,nuspec,props,resx,targets,yml,tasks}]
 indent_size = 2
@@ -378,7 +390,7 @@ dotnet_diagnostic.IDE0073.severity = warning
 file_header_template = Licensed to the .NET Foundation under one or more agreements.\nThe .NET Foundation licenses this file to you under the MIT license.
 
 # IDE1006: Required naming style
-dotnet_diagnostic.IDE1006.severity = warning
+dotnet_diagnostic.IDE1006.severity = suggestion
 
 # IDE0161: Convert to file-scoped namespace
 dotnet_diagnostic.IDE0161.severity = warning
@@ -536,10 +548,7 @@ dotnet_style_prefer_compound_assignment = true:warning
 dotnet_style_prefer_simplified_interpolation = true:suggestion
 dotnet_style_prefer_collection_expression = when_types_loosely_match:suggestion
 dotnet_style_namespace_match_folder = true:suggestion
-dotnet_style_qualification_for_field = true:suggestion
-dotnet_style_qualification_for_property = true:suggestion
-dotnet_style_qualification_for_method = true:suggestion
-dotnet_style_qualification_for_event = true:suggestion
+
 dotnet_style_readonly_field = true:suggestion
 dotnet_style_predefined_type_for_locals_parameters_members = true:suggestion
 dotnet_style_predefined_type_for_member_access = true:suggestion
@@ -549,3 +558,5 @@ dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:silent
 dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:silent
 dotnet_style_parentheses_in_other_operators = never_if_unnecessary:silent
 dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:silent
+
+
