Updated license headers and refactored code for readability and organization
Updated license headers in multiple files to include additional entities. Rearranged `using` statements and added spaces for better readability in `AsyncRpcConsumer.cs` and `ConsumerBaseParameters.cs`. Added `DisposeAsync` method in `ConsumerBase.cs`. Changed namespaces, rearranged test methods, and renamed classes in several test files. Removed `Oragon_RabbitMQ` folder from `Oragon.RabbitMQ.UnitTests.csproj` and `TelemetryExtensionsTests` class. Added new test classes `AsyncQueueConsumerTests` and `Extensions_Telemetry_Tests` with several new test methods. Added `using` directives in `AsyncQueueConsumerTests.cs` and `Extensions.TelemetryTests.cs`.

--- a/.editorconfig
+++ b/.editorconfig
@@ -387,7 +387,8 @@ dotnet_diagnostic.IDE0062.severity = warning
 
 # IDE0073: File header
 dotnet_diagnostic.IDE0073.severity = warning
-file_header_template = Licensed to the .NET Foundation under one or more agreements.\nThe .NET Foundation licenses this file to you under the MIT license.
+#file_header_template = Licensed to the .NET Foundation under one or more agreements.\nThe .NET Foundation licenses this file to you under the MIT license.
+file_header_template = Licensed to LuizCarlosFaria, gaGO.io, Mensageria .NET, Cloud Native .NET and ACADEMIA.DEV under one or more agreements.\nThe ACADEMIA.DEV licenses this file to you under the MIT license.
 
 # IDE1006: Required naming style
 dotnet_diagnostic.IDE1006.severity = suggestion
