Refactor package references to shared .props file
This commit centralizes package references in the `Oragon.RabbitMQ.Build.props` file. The `Oragon.RabbitMQ.Abstractions.csproj`, `Oragon.RabbitMQ.MinimalConsumer.csproj`, and `Oragon.RabbitMQ.csproj` files have been updated to import this shared .props file. Package references for `RabbitMQ.Client` and `Dawn.Guard` have been moved from individual project files to the shared .props file. Additionally, the versions of `Microsoft.CodeAnalysis.NetAnalyzers` and `Microsoft.CodeAnalysis.PublicApiAnalyzers` have been updated in the .props file. This refactoring ensures consistency across multiple projects in the solution.

--- a/src/Oragon.RabbitMQ/Oragon.RabbitMQ.csproj
+++ b/src/Oragon.RabbitMQ/Oragon.RabbitMQ.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<Import Project="./../Oragon.RabbitMQ.Build.props" />
 
@@ -6,8 +6,6 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0-preview.4.24266.19" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0-preview.4.24266.19" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0-preview.4.24266.19" />
-	</ItemGroup>
-	<ItemGroup>
 		<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.9.0-alpha.1" />
 		<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0-alpha.1" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.8.1" />
