--- a/src/Oragon.RabbitMQ.Build.props
+++ b/src/Oragon.RabbitMQ.Build.props
@@ -67,13 +67,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="8.0.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" Version="3.3.4" PrivateAssets="all" />
+    <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0-preview.24216.2" />
+    <PackageReference Update="Microsoft.CodeAnalysis.PublicApiAnalyzers" Version="3.11.0-beta1.24219.2" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.0.0-rc.1" />
+    <PackageReference Include="Dawn.Guard" Version="1.12.0" />
   </ItemGroup>
-
 
   <PropertyGroup>
     <AddPublicApiAnalyzers>true</AddPublicApiAnalyzers>
   </PropertyGroup>
-  
+
 </Project>
