Added new enqueue feature and updated project structure
Several projects were added to the solution file and their build configurations were updated. Service registrations and method calls across multiple files were updated to discard return values using the discard operator. Project references and service registrations were added in `Program.cs` of `DotNetAspireApp.ApiService`, `DotNetAspireApp.Web`, and `DotNetAspireApp.Worker`. The `BusinessCommandOrEvent` class was replaced with `DoSomethingCommand` in several files. A new navigation link for "Enqueue" was added in `NavMenu.razor` and `WeatherApiClient` was replaced with `BackendApiClient` in `Weather.razor`. Project references to `DotNetAspireApp.Common` were added in `DotNetAspireApp.Web.csproj` and `DotNetAspireApp.Worker.csproj`. The `WeatherApiClient.cs` and `BusinessCommandOrEvent.cs` classes were removed. Nullable reference types were enabled in `MessagePublisher.cs` and method calls were updated to handle possible null values. Test files were updated to assign the return value of assertions to a discard variable. A new .NET 8.0 project file `DotNetAspireApp.Common.csproj` and a new file `DoSomethingCommand.cs` were added. The `BackendApiClient.cs` file was updated to include a new method `EnqueueAsync` and a new Razor page `Enqueue.razor` was added.

--- a/samples/Aspire/DotNetAspireApp.ApiService/DotNetAspireApp.ApiService.csproj
+++ b/samples/Aspire/DotNetAspireApp.ApiService/DotNetAspireApp.ApiService.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.MinimalConsumer\Oragon.RabbitMQ.MinimalConsumer.csproj" />
+    <ProjectReference Include="..\Aspire.RabbitMQ.Client\Aspire.RabbitMQ.Client.csproj" />
+    <ProjectReference Include="..\DotNetAspireApp.Common\DotNetAspireApp.Common.csproj" />
     <ProjectReference Include="..\DotNetAspireApp.ServiceDefaults\DotNetAspireApp.ServiceDefaults.csproj" />
   </ItemGroup>
 
