--- a/samples/Aspire/DotNetAspireApp.Web/DotNetAspireApp.Web.csproj
+++ b/samples/Aspire/DotNetAspireApp.Web/DotNetAspireApp.Web.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DotNetAspireApp.Common\DotNetAspireApp.Common.csproj" />
     <ProjectReference Include="..\DotNetAspireApp.ServiceDefaults\DotNetAspireApp.ServiceDefaults.csproj" />
   </ItemGroup>
 
