--- a/samples/Aspire/DotNetAspireApp.Worker/DotNetAspireApp.Worker.csproj
+++ b/samples/Aspire/DotNetAspireApp.Worker/DotNetAspireApp.Worker.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\DotNetAspireApp.ServiceDefaults\DotNetAspireApp.ServiceDefaults.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Registers\" />
+  </ItemGroup>
+
 </Project>
