Enhanced project descriptions and dependencies
- Added detailed `Description` PropertyGroups in Oragon.RabbitMQ.* projects to clarify their purposes and functionalities.
- Removed BOM from NewtonsoftJson and SystemTextJson projects for consistency.
- Explicitly defined project dependencies in *.csproj files to improve clarity and maintainability.
- Updated Oragon.RabbitMQ with new package references for enhanced functionality and performance.

#8 #9 #10 #11

--- a/src/Oragon.RabbitMQ.Abstractions/Oragon.RabbitMQ.Abstractions.csproj
+++ b/src/Oragon.RabbitMQ.Abstractions/Oragon.RabbitMQ.Abstractions.csproj
@@ -2,6 +2,9 @@
 
 
   <Import Project="./../Oragon.RabbitMQ.Build.props" />
+  <PropertyGroup>
+    <Description>Defines the core abstractions for RabbitMQ message consumers. Offers a flexible foundation for extending and integrating custom RabbitMQ solutions.</Description>
+  </PropertyGroup>
 
 
 </Project>
