Enhanced Oragon.RabbitMQ with Docker support
- Added "Standalone", "docker-compose", and "DotNetConsumerApp" projects to the Oragon.RabbitMQ.sln, expanding the solution's capabilities.
- Updated .dockerignore for better Docker build performance by excluding unnecessary files and directories while allowing specific `.git` files.
- Introduced a multi-stage Dockerfile for the DotNetConsumerApp, optimizing image size and build time.
- Upgraded DotNetConsumerApp to target .NET 8.0, enabled nullable reference types, implicit usings, and added package references for RabbitMQ and ASP.NET Core.
- Added an HTTP client configuration file for API testing in DotNetConsumerApp.
- Introduced a `PriceChangeEvent` record type and an `UpdateService` class for handling price change events.
- Updated `Program.cs` with licensing, RabbitMQ setup, and minimal API endpoints.
- Configured multiple launch profiles in `launchSettings.json` for versatile application testing environments.
- Updated application settings in `appsettings.json` and `appsettings.Development.json` for logging and allowed hosts.
- Created a Docker Compose project file (`docker-compose.dcproj`) and updated Docker Compose configurations (`docker-compose.yml` and `docker-compose.override.yml`) for service orchestration.
- Commented out `PackageType` in Oragon.RabbitMQ.Build.props and set `RequeueOnCrash` to `true` in `AsyncQueueConsumerParameters.cs` for enhanced package handling and fault tolerance.

--- a/src/Oragon.RabbitMQ.Build.props
+++ b/src/Oragon.RabbitMQ.Build.props
@@ -32,7 +32,7 @@
     <Company>oragon.io</Company>
     <Product>Oragon</Product>
     <PackageTags>oragon architecture luizcarlosfaria rabbitmq</PackageTags>
-    <PackageType>Library</PackageType>
+    <!--<PackageType>Library</PackageType>-->
   </PropertyGroup>
 
 
