Refactor messaging setup and update packages
- In DotNetConsumerApp.csproj, removed outdated Oragon.RabbitMQ package references and added Microsoft.AspNetCore.OpenApi version 8.0.6. Updated Oragon.RabbitMQ and its serializers to version 0.0.7-beta.
- In Program.cs, removed singleton service for IAMQPSerializer and added comments to guide serializer selection. Introduced options for SystemTextJsonAMQPSerializer and NewtonsoftAMQPSerializer. Updated queue topology for "events1" and "events2" with dead-letter configurations and added a new "events3" queue with indefinite requeueing on crash.
- In AsyncQueueConsumerParameters.cs, adjusted the default setting of RequeueOnCrash, suggesting a change in its initialization or usage.

--- a/samples/Standalone/DotNetConsumerApp/DotNetConsumerApp.csproj
+++ b/samples/Standalone/DotNetConsumerApp/DotNetConsumerApp.csproj
@@ -10,10 +10,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Oragon.RabbitMQ" Version="0.0.6-beta"></PackageReference>
-    <PackageReference Include="Oragon.RabbitMQ.Serializer.SystemTextJson" Version="0.0.6-beta"></PackageReference>
+   
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0-Preview.1" />
+    <PackageReference Include="Oragon.RabbitMQ" Version="0.0.7-beta" />
+    <PackageReference Include="Oragon.RabbitMQ.Serializer.NewtonsoftJson" Version="0.0.7-beta" />
+    <PackageReference Include="Oragon.RabbitMQ.Serializer.SystemTextJson" Version="0.0.7-beta" />
     <PackageReference Include="RabbitMQ.Client" Version="7.0.0-rc.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
