--- a/samples/Aspire/Aspire.RabbitMQ.Client/Aspire.RabbitMQ.Client.csproj
+++ b/samples/Aspire/Aspire.RabbitMQ.Client/Aspire.RabbitMQ.Client.csproj
@@ -15,11 +15,11 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="8.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0-preview.4.24266.19" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0-preview.4.24266.19" />
-    <PackageReference Include="Polly.Core" Version="8.4.0" />
-    <PackageReference Include="RabbitMQ.Client" Version="7.0.0-rc.1" />
-    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0-rc.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0-preview.5.24306.7" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0-preview.5.24306.7" />
+    <PackageReference Include="Polly.Core" Version="8.4.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.0.0-rc.4" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0" />
   </ItemGroup>
 
   <ItemGroup>
