Update package references and add new launch profile
Updated various `Microsoft.Extensions` packages to `9.0.0-preview.7.24405.7`.
Updated `RabbitMQ.Client` to `7.0.0-rc.8`.
Updated `Microsoft.Extensions.Http.Resilience` to `9.0.0-preview.7.24412.10`.
Updated `Microsoft.Extensions.ServiceDiscovery` to `8.2.0`.
Added new launch profile `otlp-academia-dev` in `launchSettings.json`.
Updated `Microsoft.NET.Test.Sdk` to `17.11.0`.
Updated `xunit.runner.visualstudio` to `3.0.0-pre.24`.

--- a/samples/Aspire/DotNetAspireApp.Web/Properties/launchSettings.json
+++ b/samples/Aspire/DotNetAspireApp.Web/Properties/launchSettings.json
@@ -18,6 +18,29 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "otlp-academia-dev": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7021;http://localhost:5164",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "OTEL_BLRP_SCHEDULE_DELAY": "1000",
+        "OTEL_BSP_SCHEDULE_DELAY": "1000",
+        "OTEL_DOTNET_EXPERIMENTAL_ASPNETCORE_DISABLE_URL_QUERY_REDACTION": "true",
+        "OTEL_DOTNET_EXPERIMENTAL_HTTPCLIENT_DISABLE_URL_QUERY_REDACTION": "true",
+        "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES": "true",
+        "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES": "true",
+        "OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY": "in_memory",
+        "OTEL_EXPORTER_OTLP_ENDPOINT": "https://otlp.academia.dev",
+        "OTEL_EXPORTER_OTLP_HEADERS": "x-otlp-api-key=f263fef34533c0da74d2ede69b48d651",
+        "OTEL_EXPORTER_OTLP_PROTOCOL": "http",
+        "OTEL_METRIC_EXPORT_INTERVAL": "1000",
+        "OTEL_RESOURCE_ATTRIBUTES": "service.instance.id=webfrontend-saeq0p8",
+        "OTEL_SERVICE_NAME": "webfrontend",
+        "OTEL_TRACES_SAMPLER": "always_on"
+      }
     }
   }
 }
