--- a/samples/Aspire/DotNetAspireApp.Worker/DotNetAspireApp.Worker.csproj
+++ b/samples/Aspire/DotNetAspireApp.Worker/DotNetAspireApp.Worker.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.AspireClient\Oragon.RabbitMQ.AspireClient.csproj" />
     <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.Serializer.NewtonsoftJson\Oragon.RabbitMQ.Serializer.NewtonsoftJson.csproj" />
     <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.Serializer.SystemTextJson\Oragon.RabbitMQ.Serializer.SystemTextJson.csproj" />
     <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ\Oragon.RabbitMQ.csproj" />
