--- a/src/Oragon.RabbitMQ.AspireClient/Oragon.RabbitMQ.AspireClient.csproj
+++ b/src/Oragon.RabbitMQ.AspireClient/Oragon.RabbitMQ.AspireClient.csproj
@@ -1,16 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="./../Oragon.RabbitMQ.Build.props" />
+  
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <IsPackable>true</IsPackable>
-    <PackageTags>$(ComponentDatabasePackageTags) rabbitmq amqp</PackageTags>
-    <Description>A RabbitMQ client that integrates with Aspire, including health checks, logging, and telemetry.</Description>
+    <Description>A RabbitMQ client that integrates with Aspire, including health checks, logging, and telemetry using RabbitMQ.Client 7 RC Version of .</Description>
     <NoWarn>$(NoWarn);SYSLIB1100;SYSLIB1101</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\Common\ConfigurationSchemaAttributes.cs" Link="ConfigurationSchemaAttributes.cs" />
-    <Compile Include="..\Common\HealthChecksExtensions.cs" Link="HealthChecksExtensions.cs" />
+    <Compile Include="..\Common\ConfigurationSchemaAttributes.cs" Link="AspireClient\ConfigurationSchemaAttributes.cs" />
+    <Compile Include="..\Common\HealthChecksExtensions.cs" Link="AspireClient\HealthChecksExtensions.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,7 +17,6 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0-preview.7.24405.7" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0-preview.7.24405.7" />
     <PackageReference Include="Polly.Core" Version="8.4.2" />
-    <PackageReference Include="RabbitMQ.Client" Version="7.0.0-rc.8" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0" />
   </ItemGroup>
 
