--- a/src/Oragon.RabbitMQ.Build.props
+++ b/src/Oragon.RabbitMQ.Build.props
@@ -70,7 +70,7 @@
   <ItemGroup>
     <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0-preview.24216.2" />
     <PackageReference Update="Microsoft.CodeAnalysis.PublicApiAnalyzers" Version="3.11.0-beta1.24219.2" />
-    <PackageReference Include="RabbitMQ.Client" Version="7.0.0-rc.8" />    
+    <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />    
     <PackageReference Include="Dawn.Guard" Version="1.12.0" />
   </ItemGroup>
 
