Starting configuration to be multitarget (.NET 8 and .NET 9)

--- a/samples/Aspire/DotNetAspireApp.ServiceDefaults/DotNetAspireApp.ServiceDefaults.csproj
+++ b/samples/Aspire/DotNetAspireApp.ServiceDefaults/DotNetAspireApp.ServiceDefaults.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+  <Import Project="./../../../Global.Build.props" />
+
+  <PropertyGroup>    
     <IsAspireSharedProject>true</IsAspireSharedProject>
   </PropertyGroup>
+  
+
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
