--- a/Global.Build.props
+++ b/Global.Build.props
@@ -4,6 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <LangVersion>preview</LangVersion>
     
     <Nullable>enable</Nullable>
