--- a/samples/Aspire/DotNetAspireApp.ApiService/DotNetAspireApp.ApiService.csproj
+++ b/samples/Aspire/DotNetAspireApp.ApiService/DotNetAspireApp.ApiService.csproj
@@ -1,15 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+  <Import Project="./../../../Global.Build.props" />
+
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.AspireClient\Oragon.RabbitMQ.AspireClient.csproj" />
-    <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.MinimalConsumer\Oragon.RabbitMQ.MinimalConsumer.csproj" />
-    <ProjectReference Include="..\Aspire.RabbitMQ.Client\Aspire.RabbitMQ.Client.csproj" />
+    <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.MinimalConsumer\Oragon.RabbitMQ.MinimalConsumer.csproj" />    
     <ProjectReference Include="..\DotNetAspireApp.Common\DotNetAspireApp.Common.csproj" />
     <ProjectReference Include="..\DotNetAspireApp.ServiceDefaults\DotNetAspireApp.ServiceDefaults.csproj" />
   </ItemGroup>
