--- a/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
+++ b/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="./../../../Global.Build.props" />
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
     <IsAspireHost>true</IsAspireHost>
     <UserSecretsId>002d71cc-da7e-4297-a5c9-3c80adfc649c</UserSecretsId>
   </PropertyGroup>
