--- a/samples/Aspire/DotNetAspireApp.Web/DotNetAspireApp.Web.csproj
+++ b/samples/Aspire/DotNetAspireApp.Web/DotNetAspireApp.Web.csproj
@@ -1,10 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+  <Import Project="./../../../Global.Build.props" />
+
 
   <ItemGroup>
     <ProjectReference Include="..\DotNetAspireApp.Common\DotNetAspireApp.Common.csproj" />
