feat: Support multiple target frameworks and update packages
Modified Global.Build.props to support net8.0 and net9.0.
Updated DotNetAspireApp.AppHost.csproj with SDK reference for net9.0.
Conditional package references added for different target frameworks.
Updated Microsoft.Extensions.ServiceDiscovery in DotNetAspireApp.ServiceDefaults.csproj.
Updated Aspire.StackExchange.Redis.OutputCaching and RabbitMQ.Client in DotNetAspireApp.Web.csproj.
Updated package references in Oragon.RabbitMQ projects to support multiple frameworks.
Updated xunit.runner.visualstudio in Oragon.RabbitMQ.UnitTests.csproj.

--- a/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
+++ b/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
@@ -2,6 +2,8 @@
 
   <Import Project="./../../../Global.Build.props" />
 
+  <Sdk Condition=" '$(TargetFramework)' == 'net9.0' " Name="Aspire.AppHost.Sdk" Version="9.0.0" />
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <IsAspireHost>true</IsAspireHost>
@@ -14,10 +16,16 @@
     <ProjectReference Include="..\DotNetAspireApp.Worker\DotNetAspireApp.Worker.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.1" />
-    <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="8.2.1" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="8.2.1" />
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.2" />
+    <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="8.2.2" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="8.2.2" />
   </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="9.0.0" />    
+  </ItemGroup>
+  
 
 </Project>
