--- a/samples/Aspire/DotNetAspireApp.Web/DotNetAspireApp.Web.csproj
+++ b/samples/Aspire/DotNetAspireApp.Web/DotNetAspireApp.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="./../../../Global.Build.props" />
 
@@ -8,9 +8,15 @@
     <ProjectReference Include="..\DotNetAspireApp.ServiceDefaults\DotNetAspireApp.ServiceDefaults.csproj" />
   </ItemGroup>
 
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
+    <PackageReference Include="Aspire.StackExchange.Redis.OutputCaching" Version="8.2.2" />
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
+    <PackageReference Include="Aspire.StackExchange.Redis.OutputCaching" Version="9.0.0" />
+  </ItemGroup>
+
   <ItemGroup>
-    <PackageReference Include="Aspire.StackExchange.Redis.OutputCaching" Version="8.2.1" />
-    <PackageReference Include="RabbitMQ.Client" Version="7.0.0-rc.8" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
     <PackageReference Include="Radzen.Blazor" Version="5.3.1" />
   </ItemGroup>
 
