feat: support multiple target frameworks and update pipeline
Modified Global.Build.props to support net8.0 and net9.0.
Updated Jenkinsfile to restore and build for net9.0.
Updated DotNetAspireApp.AppHost.csproj to always include Aspire.AppHost.Sdk 9.0.0.
Removed conditional SDK import for net9.0.
Modified item group for net9.0 package references.
Added item group to include a reference to TargetFramework.

--- a/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
+++ b/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
@@ -2,7 +2,8 @@
 
   <Import Project="./../../../Global.Build.props" />
 
-  <Sdk Condition=" '$(TargetFramework)' == 'net9.0' " Name="Aspire.AppHost.Sdk" Version="9.0.0" />
+  <!-- <Sdk Condition=" '$(TargetFramework)' == 'net9.0' " Name="Aspire.AppHost.Sdk" Version="9.0.0" /> -->
+  <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -21,11 +22,14 @@
     <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="8.2.2" />
     <PackageReference Include="Aspire.Hosting.Redis" Version="8.2.2" />
   </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' OR '$(TargetFramework)' == '' ">
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
     <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="9.0.0" />
     <PackageReference Include="Aspire.Hosting.Redis" Version="9.0.0" />    
   </ItemGroup>
-  
+
+  <ItemGroup>
+    <Reference Include="$(TargetFramework)" />
+  </ItemGroup>
 
 </Project>
