Remove Oragon.RabbitMQ.MinimalConsumer and update references
The project "Oragon.RabbitMQ.MinimalConsumer" has been removed from the solution file `Oragon.RabbitMQ.sln`, including its project reference and configuration settings.

The `DotNetAspireApp.ApiService.csproj` file has been updated to:
- Remove the reference to "Oragon.RabbitMQ.MinimalConsumer".
- Add references to "Oragon.RabbitMQ.Serializer.NewtonsoftJson" and "Oragon.RabbitMQ.Serializer.SystemTextJson".

In `Program.cs`:
- The `MessagePublisher` service has been removed.
- A singleton service for `IAMQPSerializer` using `SystemTextJsonAMQPSerializer` has been added.

The `Extensions.cs` file has been entirely commented out, indicating that the extension methods for service defaults, OpenTelemetry configuration, and health checks are no longer in use.

The `Oragon.RabbitMQ.MinimalConsumer.csproj` file has been deleted, removing all its project references, package references, and framework references.

The `MessagePublisher.cs` file has been deleted, removing the implementation of the `MessagePublisher` class.

The `Oragon.RabbitMQ.IntegratedTests.csproj`, `Oragon.RabbitMQ.TestsExtensions.csproj`, and `Oragon.RabbitMQ.UnitTests.csproj` files have been updated to remove the project reference to "Oragon.RabbitMQ.MinimalConsumer".

--- a/samples/Aspire/DotNetAspireApp.ApiService/DotNetAspireApp.ApiService.csproj
+++ b/samples/Aspire/DotNetAspireApp.ApiService/DotNetAspireApp.ApiService.csproj
@@ -4,8 +4,10 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.Abstractions\Oragon.RabbitMQ.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.AspireClient\Oragon.RabbitMQ.AspireClient.csproj" />
-    <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.MinimalConsumer\Oragon.RabbitMQ.MinimalConsumer.csproj" />    
+    <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.Serializer.NewtonsoftJson\Oragon.RabbitMQ.Serializer.NewtonsoftJson.csproj" />
+    <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.Serializer.SystemTextJson\Oragon.RabbitMQ.Serializer.SystemTextJson.csproj" />    
     <ProjectReference Include="..\DotNetAspireApp.Common\DotNetAspireApp.Common.csproj" />
     <ProjectReference Include="..\DotNetAspireApp.ServiceDefaults\DotNetAspireApp.ServiceDefaults.csproj" />
   </ItemGroup>
